# yolk

./: .gitignore  Cargo.toml  Makefile  README.md  example.yolk
docs/: spec.md
src/: array.rs  ast.rs  environment.rs  error.rs  format.rs  function.rs  graph.rs  lib.rs  main.rs  number.rs  optimizer.rs  parser.rs  transpiler.rs  value.rs  yolk.pest
src/ast/: mod.rs  tests.rs
src/environment/: mod.rs  tests.rs
src/format/: mod.rs  tests.rs
src/function/: mod.rs  tests.rs
src/grammar/: yolk.pest
src/parser/: mod.rs  tests.rs
src/transpiler/: environment.rs  function.rs  mod.rs  tests.rs  value.rs
src/value/: mod.rs  tests.rs
tests/: correctness.rs  integration.rs  optimization.rs
tests/corpus/: README.md  arithmetic_precedence.yolk  boolean_precedence.yolk  dot_product.yolk  logical_precedence.yolk  nested_subtraction.yolk  product.yolk  sum.yolk  trig.yolk
