[package]
name = "yolk"
version = "0.5.1"
authors = ["Avery Crespi <averycrespi@gmail.com>"]
edition = "2018"
description = "Numerical computing for YOLOL"
license = "MIT"

repository = "https://github.com/averycrespi/yolk"
readme = "README.md"

exclude = ["/resources/*"]

[dependencies]
clap = "2.33"
failure = "0.1"
lazy_static = "1.3"
num-traits = "0.2"
pest = "2.1"
pest_derive = "2.1"
yolol_number = "0.6"
yoloxide = "0.4"
